# sunkit-image

./: .codecov.yaml  .coveragerc  .cruft.json  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yaml  .rtd-environment.yml  .ruff.toml  .sunpy-template.yml  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  Untitled.ipynb  _typos.toml  ah_bootstrap.py  azure-pipelines.yml  azure-templates.yml  codecov.yml  fix_asda.py  granule.py  pyproject.toml  pytest.ini  radial_test.py  readthedocs.yml  ruff.toml  setup.cfg  setup.py  sunkit-dev-env.yml  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: anything_else.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  scheduled_builds.yml  sub_package_update.yml
changelog/: 114.feature.rst  118.breaking.rst  12.feature.rst  126.doc.rst  128.doc.rst  133.feature.rst  136.breaking.rst  136.removal.rst  137.doc.rst  139.breaking.rst  139.feature.rst  154.feature.rst  155.breaking.rst  160.trivial.rst  17.feature.rst  185.breaking.rst  188.feature.rst  194.breaking.1.rst  194.breaking.rst  195.feature.rst  205.bugfix.rst  205.doc.rst  205.feature.rst  206.removal.rst  207.breaking.rst  212.doc.rst  215.bugfix.rst  215.trivial.rst  217.breaking.rst  218.feature.rst  22.trivial.rst  223.breaking.rst  231.breaking.rst  231.bugfix.rst  238.doc.rst  24.feature.rst  243.breaking.rst  254.breaking.rst  254.bugfix.rst  266.breaking.rst  (+22 more)
docs/: changelog.rst  conf.py  dev.rst  format.rst  index.rst  nitpick-exceptions  rtd_requirements.txt
docs/code_ref/: asda.rst  coalignment.rst  coalignment_module.rst  enhance.rst  flct.rst  granule.rst  index.rst  nafe.rst  noise.rst  offlimb.rst  offlimb_enhance.rst  radial.rst  reproject.rst  stara.rst  sunkit_image.rst  time_lag.rst  trace.rst  utils.rst
docs/how_to_guide/: adding_a_coalignment_method.rst  index.rst  using_new_coalignment_interface.rst  using_the_coalignment_interface.rst
docs/sunkit_image/: index.rst
docs/whatsnew/: changelog.rst  index.rst
examples/: README.txt  Removing Cosmic Ray hIts.py  advanced_wow.py  aligning_aia_with_eis_maps.py  calculating_time_lags.py  detecting_swirls.py  finding_sunspots_using_stara.py  io_dat_files.py  io_dat_files.py.orig  mapsequence_coalignment.py  mapsequence_solar_rotation.py  multiscale_gaussian_normalization.py  persistence_transform.py  plotting_sunspots_using_stara.py  radial_gradient_filters.py  radial_histogram_equalization.py  radial_histogram_equalization_functionalized.py  remove_CR_hits.py  remove_cosmic_rays.py  reproject_carrington.py  rgb_composite.py  running_flct.py  skip_remove_CR_hits.py  tracing_loops.py  using_asda.py  watroo_wow.py  wow.py
examples/enhance/: multiscale_gaussian_normalization.py
examples/example_template/: example_template.py
examples/offlimb/: fourier_normalizing_radial_gradient_filter.py  normalizing_radial_gradient_filter.py  radial_gradient_filters.py
licenses/: LICENSE.rst  LICENSE_ASDA.rst  LICENSE_NOISE.rst
sunkit_image/: __init__.py  _sunpy_init.py  asda.py  check.py  coalignment.py  conftest.py  enhance.py  granule.py  nafe.py  noise.py  offlimb.py  offlimb_enhance.py  radial.py  reproject.py  stara.py  time_lag.py  trace.py  utils.py  version.py
sunkit_image/_dev/: __init__.py  scm_version.py
sunkit_image/coalignment/: __init__.py  decorators.py  interface.py  match_template.py  phase_cross_correlation.py  register.py
sunkit_image/coalignment/tests/: conftest.py  test_coalignment.py  test_decorators.py  test_interface.py  test_match_template.py  test_register.py
sunkit_image/coalignment/util/tests/: test_decorators.py
sunkit_image/coalignment_module/: __init__.py  interface.py  match_template.py
sunkit_image/coalignment_module/tests/: test_coalignment.py  test_match_template.py
sunkit_image/coalignment_module/util/: decorators.py
sunkit_image/coalignment_module/util/tests/: test_decorators.py
sunkit_image/data/: __init__.py  testgauss_vm.csv  testgauss_vx.csv  testgauss_vy.csv  vxtest.csv
sunkit_image/data/test/: IDL.txt  Python.txt  __init__.py  aia_171_jsoc_cutout.fits  asda_correct.fits  asda_correct.npz  dkist_photosphere.fits  eis_20140108_095727.fe_12_195_119.2c-0.int.fits  hashgauss_1.csv  hashgauss_2.csv  hashgauss_F1.csv  hashgauss_F2.csv  hmi_continuum_test_lowres_data.fits  testgauss_vm.csv  vmtest.csv  vytest.csv
sunkit_image/flct/: __init__.py  check.py  flct.py  pyflct.pyx  pyflctsubs.c  pyflctsubs.pyx  setup.py  setup_package.py  test_flct.py  utils.py
sunkit_image/flct/src/: COPYRIGHT  flctsubs.c  flctsubs.h  pyflct.pyx  sunkit.c  sunkit.h
sunkit_image/flct/tests/: __init__.py  test_flct.py  test_pyflct.py  test_utils.py
sunkit_image/new_coalignment_api_dev/: coalignment_interface.py  defining_method.py  register_method.py
sunkit_image/tests/: asda_example.py  conftest.py  figure_hashes_mpl_3100_ft_261_sunpy_700_astropy_710.json  figure_hashes_mpl_3108_ft_261_sunpy_710_astropy_720.json  figure_hashes_mpl_332_ft_261_sunkit_image_dev_sunpy_300.json  figure_hashes_mpl_332_ft_261_sunkit_image_dev_sunpy_400.json  figure_hashes_mpl_362_ft_261_sunkit_image_dev_sunpy_411.json  figure_hashes_mpl_372_ft_261_sunkit_image_dev_sunpy_500.json  figure_hashes_mpl_390_ft_261_sunpy_513_astropy_610.json  figure_hashes_mpl_390_ft_261_sunpy_600_astropy_610.json  figure_hashes_py37.json  helpers.py  test_asda.py  test_coalignment.py  test_enhance.py  test_granule.py  test_nafe.py  test_offlimb.py  test_offlimb_enhance.py  test_radial.py  test_reproject.py  test_rhef.py  test_stara.py  test_time_lag.py  test_trace.py  test_utils.py
sunkit_image/utils/: NoiseLevel.py  __init__.py  decorators.py  noise.py  noise_funcs.py  utils.py
sunkit_image/utils/tests/: NoiseLevel_test.py  test_decorators.py  test_noise.py  test_noise_funcs.py  test_utils.py
