[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
]
build-backend = 'setuptools.build_meta'

[project]
name = "sunkit_image"
dynamic = ["version"]
description = "An image processing toolbox for Solar Physics."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["solar physics", "solar", "science", "NASA", "image analysis"]
authors = [
  {email = "sunpy@googlegroups.com"},
  {name = "The SunPy Community"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'astropy>=5.2.0',
  'numpy>=1.21.0',
  'matplotlib>=3.5.0',
  'scipy>=1.8.0,!=1.10.0',
  'scikit-image>=0.19.0',
  'sunpy>=5.0.0',
]

[project.urls]
changelog = "https://irispy-lmsal.readthedocs.io/en/stable/changelog"
documentation = "https://irispy-lmsal.readthedocs.io/en/stable/"
homepage = "https://iris.lmsal.com/"
issue_tracker = "https://github.com/LM-SAL/irispy-lmsal/issues"
repository = "https://github.com/LM-SAL/irispy-lmsal"

[project.optional-dependencies]
all = ["sunkit_image"]
tests = [
  "sunkit_image[all]",
  'pytest-astropy',
  'pytest-mpl',
]
docs = [
  "irispy-lmsal[all]",
  'astroscrappy',
  'beautifulsoup4',
  'dask',
  'drms',
  'matplotlib',
  'sphinx-automodapi',
  'sphinx-changelog',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx',
  'sunpy-sphinx-theme',
  'zeep',
]
dev = ["sunkit_image[tests,docs]"]

[tool.setuptools_scm]
write_to = "sunkit_image/_version.py"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
provides = ["sunkit_image"]
license-files = ["LICENSE.rst"]

[tool.setuptools.packages.find]
exclude = ["sunkit_image._dev"]
namespaces = false

[tool.codespell]
skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
ignore-words-list = "sav,"

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts ]
    enabled = true

  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/sunpy/sunkit-image/blob/main/changelog/README.rst"

    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/sunkit-image/blob/main/changelog/README.rst)."

    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/sunkit-image/blob/main/changelog/README.rst)"

    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

[tool.towncrier]
    package = "sunkit_image"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/sunkit-image/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Deprecations and Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Improved Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Trivial/Internal Changes"
      showcontent = true
