[metadata]
name = sunkit_image
author = The SunPy Community
author_email = sunpy@googlegroups.com
description = A image processing toolbox for Solar Physics.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
url = http://docs.sunpy.org/projects/sunkit-image/
edit_on_github = True
github_project = sunpy/sunkit-image
platform = any
keywords = solar physics, solar, science, sun, image analysis
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  scikit-image>=0.16.2
  sunpy>=2.0.0

[options.extras_require]
tests =
  pytest-astropy
  pytest-mpl >= 0.12
  tox
docs =
  astroscrappy
  beautifulsoup4
  drms
  sphinx
  sphinx_automodapi
  sphinx-changelog
  sphinx-gallery
  sunpy-sphinx-theme
  towncrier
  zeep

[tool:pytest]
testpaths = "sunkit_image" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunkit_image[/\]_dev" ".jupyter" ".history" "tools" "sunkit_image[\/]extern"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    mpl_image_compare: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    error::sunpy.util.exceptions.SunpyDeprecationWarning
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    # Map issues
    ignore:Missing metadata for observation time
    ignore:Missing metadata for observer
    ignore:Missing metadata for solar angular radius
    # See https://github.com/pandas-dev/pandas/issues/26367; this can be
    # removed when our minimum pandas version is >=0.25
    ignore:can't resolve package from __spec__ or __package__:ImportWarning
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/Cadair/parfive/issues/41
    ignore:The loop argument is deprecated
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # See https://github.com/mvantellingen/python-zeep/issues/956
    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
    # See https://github.com/aio-libs/aiohttp/issues/4842
    ignore:"@coroutine" decorator is deprecated
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/scikit-image/scikit-image/issues/4848
    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
    # See https://github.com/astropy/astropy/pull/10570
    ignore:leap-second auto-update failed
    # See https://github.com/astropy/extension-helpers/issues/23
    ignore:Distutils was imported before Setuptools
    # Figure tests use agg backend so show doesn't work but we use it in peek
    ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
    # Ignore doctest issues: docs/guide/tour.rst
    ignore:File may have been truncated*
    # Some tests use data that have dates in the future and ERFA does not like.
    ignore:ERFA function "d2dtf"*
    ignore:ERFA function "dtf2d"*
    # Currently helio makes unverified requests - this filter should be removed when
    # https://github.com/sunpy/sunpy/issues/4401 is fixed
    ignore:Unverified HTTPS request
    # https://github.com/astropy/astropy/issues/11272
    ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
    # This isn't really an issue it's an annoyance, it's triggered by printing
    # an astropy table inside a test, which is generally only done when
    # debugging.
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream
    # Recent change to astropy has made our figure tests emit this warning.
    # https://github.com/sunpy/sunpy/issues/5073
    ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = sunkit_image
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  */sunkit_image/__init__*
  */sunkit_image/*/tests/*
  */sunkit_image/*setup*
  */sunkit_image/conftest.py
  */sunkit_image/cython_version*
  */sunkit_image/extern/*
  */sunkit_image/version*
  sunkit_image/__init__*
  sunkit_image/*/tests/*
  sunkit_image/*setup*
  sunkit_image/conftest.py
  sunkit_image/cython_version*
  sunkit_image/extern/*
  sunkit_image/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
