[metadata]
name = sunkit_image
author = The SunPy Community
author_email = sunpy@googlegroups.com
description = A image processing toolbox for Solar Physics.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
url = http://docs.sunpy.org/projects/sunkit-image/
edit_on_github = True
github_project = sunpy/sunkit-image
platform = any
keywords = solar physics, solar, science, sun, image analysis
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  scikit-image>=0.18.0
  sunpy>=3.0.0

[options.extras_require]
tests =
  dask
  pytest-astropy
  pytest-mpl >= 0.12
docs =
  astroscrappy
  beautifulsoup4
  dask
  drms
  matplotlib
  sphinx
  sphinx_automodapi
  sphinx-changelog
  sphinx-gallery
  sunpy-sphinx-theme
  zeep

[tool:pytest]
testpaths = "sunkit_image" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunkit_image[/\]_dev" ".jupyter" ".history" "tools" "sunkit_image[\/]extern"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
mpl-results-path = figure_test_images
mpl-use-full-test-name = True
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    mpl_image_compare: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    ignore

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = sunkit_image
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  */sunkit_image/__init__*
  */sunkit_image/*/tests/*
  */sunkit_image/*setup*
  */sunkit_image/conftest.py
  */sunkit_image/cython_version*
  */sunkit_image/extern/*
  */sunkit_image/version*
  sunkit_image/__init__*
  sunkit_image/*/tests/*
  sunkit_image/*setup*
  sunkit_image/conftest.py
  sunkit_image/cython_version*
  sunkit_image/extern/*
  sunkit_image/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
